--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -107,31 +107,37 @@
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="0q1rxc96m2w" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg" width="220" height="342">
     <h2>Toy Story</h2>
+    <h4> Actor: Toys</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="a0CDJZu4M5I" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/b/b0/Avatar-Teaser-Poster.jpg" width="220" height="342">
     <h2>Avatar</h2>
+    <h4> Actor: Sam Worthington</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aqovlTzY2_U" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/1/13/Monkey_King_Hero_is_Back_Chinese_film_poster.jpg" width="220" height="342">
     <h2>Monkey King</h2>
+    <h4> Actor: Monkey King</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="aEr6K1bwIVs" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/a/aa/SteveJobsposter.jpg" width="220" height="342">
     <h2>Steve Jobs</h2>
+    <h4> Actor: Michael Fassbender</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="XCwy6lW5Ixc" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/1/11/School_of_Rock_Poster.jpg" width="220" height="342">
     <h2>School of Rock</h2>
+    <h4> Actor: Jack Black</h4>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="BYRWfS2s2v4" data-toggle="modal" data-target="#trailer">
     <img src=" https://upload.wikimedia.org/wikipedia/en/9/9f/Midnight_in_Paris_Poster.jpg" width="220" height="342">
     <h2>Midnight In Paris</h2>
+    <h4> Actor: Owen Wilson</h4>
 </div>
 
     </div>
